fixing z-index off nav-bar

--- a/src/assets/style/home.scss
+++ b/src/assets/style/home.scss
@@ -14,6 +14,7 @@ main {
 }
 .navbar:hover,
 .navbar.active{
+  z-index: 100;
   width: 300px;
 }
 .navbar ul {
@@ -89,10 +90,15 @@ main {
   .toggle {
     left: 0;
   }
+  .toggle.active {
+    z-index: 101;
+     position: fixed;
+   }
   .navbar {
     left: -60px;
   }
   .navbar.active {
+    z-index: 100;
     left: 0;
     width: 100%;
     box-sizing: unset;
